--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,13 @@
             "name": "Launch and Debug Standalone Blazor WebAssembly App",
             "type": "blazorwasm",
             "request": "launch",
-            "cwd": "${workspaceFolder}/src/Blazor.WebAssemblyApp"
+            "cwd": "${workspaceFolder}/src/Demo.BlazorApp"
+        },
+        {
+            "name": "Attach to .NET Functions",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:azureFunctions.pickProcess}"
         }
     ]
 }
