--- a/src/Demo.BlazorApp/Properties/launchSettings.json
+++ b/src/Demo.BlazorApp/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Blazor.WebAssemblyApp": {
+    "Demo.BlazorApp": {
       "commandName": "Project",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
