--- a/src/Demo.BlazorApp/wwwroot/appsettings.json
+++ b/src/Demo.BlazorApp/wwwroot/appsettings.json
@@ -1,5 +1,4 @@
 {
-  "FUNCTIONAPP_BASE_URI": "http://localhost:7071/api/",
-  "FUNCTIONAPP_ENDPOINT": "hello",
-  "FUNCTIONAPP_AUTH_KEY": ""
+  "FUNCTIONAPP_BASE_URI": "http://localhost:7072/api/",
+  "FUNCTIONAPP_ENDPOINT": "hello"
 }
