--- a/src/Demo.BlazorApp/Demo.BlazorApp.csproj
+++ b/src/Demo.BlazorApp/Demo.BlazorApp.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
+
+    <JsLibraryRoot>JsLibraries\</JsLibraryRoot>
+    <DefaultItemExcludes>$(DefaultItemExcludes);$(JsLibraryRoot)node_modules\**</DefaultItemExcludes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,4 +15,15 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="$(JsLibraryRoot)**" />
+    <None Remove="$(JsLibraryRoot)**" />
+    <None Include="$(JsLibraryRoot)**" Exclude="$(JsLibraryRoot)node_modules\**" />
+  </ItemGroup>
+
+  <Target Name="PublishRunWebpack" AfterTargets="Build">
+    <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
+    <Exec WorkingDirectory="$(JsLibraryRoot)" Command="npm install" />
+    <Exec WorkingDirectory="$(JsLibraryRoot)" Command="npm run build" />
+  </Target>
 </Project>
